--- a/app/src/main/res/layout/activity_command.xml
+++ b/app/src/main/res/layout/activity_command.xml
@@ -1,13 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="se07.smart_ble.CommandActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Root/Owner"
+        android:id="@+id/textView_typeUser"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Last Access: hh:mm dd/mm/yy"
+        android:id="@+id/textView_lasstAccess"
+        android:layout_below="@+id/textView_typeUser"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Unlock / Lock"
+        android:id="@+id/button_unlock"
+        android:layout_below="@+id/textView_lasstAccess"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="50dp"
+        android:textSize="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="#3d8bcd"
+        android:textColor="#ffffff"
+        android:layout_marginBottom="15dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Share Management"
+        android:id="@+id/button_share"
+        android:layout_below="@+id/button_unlock"
+        android:layout_alignEnd="@+id/button_unlock"
+        android:layout_alignParentStart="true"
+        android:textSize="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="#eeeeee"
+        android:layout_marginBottom="15dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="History"
+        android:id="@+id/button_history"
+        android:layout_below="@+id/button_share"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/button_share"
+        android:textSize="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="#eeeeee"
+        android:layout_marginBottom="15dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change Password"
+        android:id="@+id/button_changePass"
+        android:layout_below="@+id/button_history"
+        android:layout_alignEnd="@+id/button_history"
+        android:layout_alignParentStart="true"
+        android:textSize="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="#eeeeee"
+        android:layout_marginBottom="15dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Information"
+        android:id="@+id/button_information"
+        android:layout_below="@+id/button_changePass"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/button_changePass"
+        android:textSize="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="#eeeeee"
+        android:layout_marginBottom="15dp" />
 </RelativeLayout>
