--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -3,4 +3,16 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:text="New Text"
+        android:id="@+id/textView_itemGridview"
+        android:layout_gravity="center_horizontal"
+        android:textAlignment="center"
+        android:gravity="center_vertical|center_horizontal"
+        android:textStyle="bold"
+        android:minHeight="60dp"
+        android:textSize="20dp"
+        android:background="#d0d0d0" />
 </LinearLayout>
