--- a/app/src/main/res/layout/dialog_change_pincode_02.xml
+++ b/app/src/main/res/layout/dialog_change_pincode_02.xml
@@ -11,32 +11,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Please login with your account to make correctly"
+        android:text="Please add your new PIN code with 4 digits number"
         android:id="@+id/textView4" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Your email:"
+        android:text="New PIN"
         android:id="@+id/textView5"
-        android:layout_marginTop="10dp" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress|numberPassword"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:enabled="false"
-        android:text="youremail@example.com" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Password:"
-        android:id="@+id/textView7"
         android:layout_marginTop="10dp" />
 
     <EditText
@@ -44,23 +27,40 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText2" />
+        android:id="@+id/editText_newPIN"
+        android:layout_marginTop="5dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="PIN again:"
+        android:id="@+id/textView8"
+        android:layout_marginTop="10dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/editText_newPinAgain"
+        android:layout_marginTop="5dp" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="NEXT"
-        android:id="@+id/button"
+        android:text="SAVE"
+        android:id="@+id/button_newPinSave"
         android:textColor="#ffffff"
         android:background="#3D8BCD"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:textStyle="bold" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="CANCEL"
-        android:id="@+id/button2"
+        android:id="@+id/button_newPinCancel"
         android:textColor="#000000"
         android:background="#eeeeee"
         android:layout_marginTop="10dp"
